 2014-05-10 14:24  robocop 
   M src/qli/dtr.cpp
   M src/qli/eval.cpp
Misc.

 2014-05-10 14:23  robocop 
   M src/burp/restore.epp
   M src/msgs/facilities2.sql
   M src/msgs/messages2.sql
Add 4 more verbose messages when restoring and reorganize code.

 2014-05-10 14:17  robocop 
   M src/jrd/vio.cpp
Misplaced parentheses are unexpected invitees.

 2014-05-09 20:26  robocop 
   M src/jrd/vio.cpp
It seems it's possible to restrict gbak more on deletions. Thanks Vlad for hint on TDBB_dont_post_dfw.

 2014-05-09 11:38  mapopa 
   D lang_helpers/gds.bas
remove vms basic

 2014-05-09 09:23  mapopa 
   M src/burp/burp.cpp
Misc cleanup

 2014-05-09 09:01  mapopa 
   M src/remote/protocol.h
Cleanup dead platforms

 2014-05-08 23:26  asfernandes 
   M src/jrd/JrdStatement.h
   M src/jrd/Mapping.cpp
   M src/jrd/ext.cpp
   M src/jrd/jrd.cpp
   M src/jrd/scl.epp
   M src/jrd/svc.cpp
   M src/jrd/vio.cpp
Misc.

 2014-05-08 02:51  asfernandes 
   M src/common/utils.cpp
   M src/dsql/DdlNodes.epp
Misc.

 2014-05-07 15:14  mapopa 
   M examples/include/align.h
FB_ALIGN is always defined in src/include/types_pub.h ((n+b-1)&~(b-1))

 2014-05-07 15:11  mapopa 
   M configure.ac
FB_ALIGN is always defined in src/include/types_pub.h ((n+b-1)&~(b-1))

 2014-05-07 14:51  mapopa 
   M examples/include/align.h
cleanup VMS FB_ALIGN define

 2014-05-07 11:21  alexpeshkoff 
   M src/jrd/JrdStatement.cpp
   M src/jrd/scl.epp
   M src/jrd/scl_proto.h
   M src/jrd/vio.cpp
Postfix for CORE-3242: somewhy when checking metadata access (like MODIFY or DROP) always checked that access from object itself. Strange at the first glance behavior, but let us do not change legacy (at least since FB1.0) when possible.

 2014-05-07 10:21  alexpeshkoff 
   M src/burp/burp.cpp
   M src/utilities/fbsvcmgr/fbsvcmgr.cpp
   M src/utilities/fbtracemgr/traceMgrMain.cpp
Fixed CORE-4398: Provide ability to specify extra-long name of log when doing gbak to avoid "attempt to store 256 bytes in a clumplet" message
